--- a/package.json
+++ b/package.json
@@ -16,9 +16,11 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.0.0",
+    "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
+    "react-phone-input-2": "^2.15.1",
     "react-router-dom": "^7.5.2"
   },
   "devDependencies": {
