--- a/package.json
+++ b/package.json
@@ -16,12 +16,18 @@
     "@mui/icons-material": "^7.0.2",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.0.0",
+    "@react-google-maps/api": "^2.20.6",
+    "@reduxjs/toolkit": "^2.7.0",
+    "axios": "^1.9.0",
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
+    "formik": "^2.4.6",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-phone-input-2": "^2.15.1",
-    "react-router-dom": "^7.5.2"
+    "react-redux": "^9.2.0",
+    "react-router-dom": "^7.5.2",
+    "yup": "^1.6.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.22.0",
