--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "@date-io/date-fns": "^3.2.1",
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.0",
-    "@mui/icons-material": "^7.0.2",
+    "@mui/icons-material": "^7.1.2",
     "@mui/material": "^7.0.2",
     "@mui/x-date-pickers": "^8.0.0",
     "@react-google-maps/api": "^2.20.6",
@@ -22,6 +22,7 @@
     "classnames": "^2.5.1",
     "date-fns": "^4.1.0",
     "formik": "^2.4.6",
+    "framer-motion": "^12.18.1",
     "react": "^18.0.0",
     "react-dom": "^18.0.0",
     "react-phone-input-2": "^2.15.1",
