--- a/.env
+++ b/.env
@@ -1,2 +1,2 @@
 VITE_GOOGLE_MAPS_API_KEY=AIzaSyAnrhLTFKP3wQ_Rmatm-PmrU7DecMBMozU
-VITE_API_BASE_URL= http://localhost:5000/api/
+VITE_API_BASE_URL=https://backend.deanlimousine.com/api/
